required changes for users to migrate from one version of MapServer to the
next.  Developers are strongly encouraged to document their changes and
their impacts on the users here.  (Please add the most recent changes to 
the top of the list.)

For a complete change history, please see the Subversion log comments.

Current Version (SVN trunk): 
---------------------------- 

- configure: look for libxslt.so under lib64 as well

- added missing ';' before charset in WFS DEscribeFeatureType header (#3793)

- add brushed line support for agg renderer (#3792)

- fix bug with marker symbols along offset line

- fix for the cluster layer returning invalid feature count (#3794)

- remove some compiler warnings

- fix incorrect scaling of hatch symbol spacing (#3773)

- fix incorrect background color for INIMAGE exceptions (#3790)

Version 6.0.0-beta4 (2011-03-30)
--------------------------------

- Fix shp2img's -i flag to honour map level transparent, image quality and 
  interlace settings.

- Make sure command-line programs use an exit status other than 0 
  when an error is encountered. (#3753)

- Applied patch to filter unwanted fribidi characters (#3763)

- Fixed lexer to set the proper state on URL variable substitutions

- Fixed Memory leak in PostGIS driver (#3768)

- Fixed PHP/MapScript symbol property setter method

- fix memory leak in bar charts

- fix some valgrind errors on agg rotated pixmap symbols

- WCS 2.0: Adjusted definition of NilValues.

- Fixed handling of PROJ_LIB value relative to mapfile path (#3094)

- Fixed compilation error with opengl support (#3769)

- add support for gml:Box for spatial filters (#3789)

- fix query map generation error introduced in beta2 when output format 
  initialized was made as needed. 

- fix incorrect PATTERN behavior on agg lines (#3787)

- report SOS DescribeObservationType in Capabilities (#3777)

- Updated lexer to detect time attribute bindings (e.g. `[item]`) in logical
  expressions
